--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
     <title>Aplikacja pogodowa</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
   </body>
 </html>
 
